# rustdash

./: .env.example  .gitignore  Cargo.toml  README-en.md  README.md  config.toml  test_endpoints.sh
src/: config.rs  loki.rs  main.rs  prometheus.rs  ui.rs
