[package]
name = "monitoring-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time handling
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Clipboard support
clipboard = "0.5"
